--- a/packages/form/src/theme/table.scss
+++ b/packages/form/src/theme/table.scss
@@ -2,22 +2,15 @@
   width: 100%;
   &.fixed {
     position: fixed;
+    height: 100%;
+    overflow: auto;
     top: 0;
     right: 0;
     left: 0;
     bottom: 0;
     z-index: 100;
-    &::before {
-      content: " ";
-      display: block;
-      background: rgba(0, 0, 0, 0.5);
-      position: fixed;
-      top: 0;
-      right: 0;
-      left: 0;
-      bottom: 0;
-      z-index: 100;
-    }
+    background: rgba(0, 0, 0, 0.5);
+
     & > .el-form-item__content {
       z-index: 101;
       position: relative;
