refactor(form): 优化代码

--- a/packages/form/src/theme/index.scss
+++ b/packages/form/src/theme/index.scss
@@ -2,6 +2,7 @@
 @use "./form-drawer.scss";
 @use "./form.scss";
 @use "./date-time.scss";
+@use "./text.scss";
 @use "./link.scss";
 @use "./fieldset.scss";
 @use "./group-list.scss";
