--- a/packages/editor/src/theme/stage.scss
+++ b/packages/editor/src/theme/stage.scss
@@ -32,7 +32,7 @@
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: #fff;
   display: flex;
   z-index: 20;
   overflow: auto;
@@ -42,11 +42,12 @@
   position: relative;
   flex-shrink: 0;
   margin: auto;
+  box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
 }
 
 .m-editor-stage-overlay-close.tmagic-design-icon {
   position: fixed;
-  right: 10px;
+  right: 20px;
   top: 10px;
 }
 
