--- a/packages/form/src/theme/form-box.scss
+++ b/packages/form/src/theme/form-box.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   padding: 16px;
-  width: 100%;
+  max-width: 90%;
   .el-box__header {
     margin: 0;
   }
