--- a/packages/editor/src/theme/floating-box.scss
+++ b/packages/editor/src/theme/floating-box.scss
@@ -5,6 +5,8 @@
   border: 1px solid $--border-color;
   display: flex;
   flex-direction: column;
+  max-height: 100%;
+  max-width: 100%;
 
   .m-editor-float-box-title {
     text-align: center;
