--- a/packages/form/src/theme/form-box.scss
+++ b/packages/form/src/theme/form-box.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   padding: 16px;
-  max-width: 90%;
+  box-sizing: border-box;
   .el-box__header {
     margin: 0;
   }
