feat(editor): 新增配置控制属性配置面板右下角的源码按钮是否显示

--- a/packages/editor/src/theme/props-panel.scss
+++ b/packages/editor/src/theme/props-panel.scss
@@ -1,5 +1,5 @@
 .m-editor-props-panel {
-  padding: 0 10px;
+  padding: 0 10px 50px 10px;
 
   .m-editor-props-panel-src-icon {
     position: absolute;
