--- a/packages/editor/src/theme/page-bar.scss
+++ b/packages/editor/src/theme/page-bar.scss
@@ -5,12 +5,13 @@
   width: 100%;
 
   .tmagic-design-button.m-editor-page-bar-switch-type-button {
-    margin-left: 7px;
+    margin-left: 10px;
     position: relative;
     top: 1px;
     border-radius: 3px 3px 0 0;
     border: 1px solid $--border-color;
     border-bottom: 1px solid transparent;
+    padding: 5px 10px;
 
     &.active {
       background-color: #f3f3f3;
