--- a/packages/stage/src/moveable-able.css
+++ b/packages/stage/src/moveable-able.css
@@ -10,6 +10,7 @@
   font-weight: bold;
   margin-left: 2px;
   position: relative;
+  cursor: pointer;
 }
 .moveable-remove-button:before, .moveable-remove-button:after {
   content: "";
