--- a/packages/editor/src/theme/common/var.scss
+++ b/packages/editor/src/theme/common/var.scss
@@ -1,14 +1,14 @@
-$--theme-color: #2882e0;
+$theme-color: #2882e0;
 
-$--font-color: #313a40;
-$--border-color: #d9dbdd;
-$--hover-color: #f3f5f9;
+$font-color: #313a40;
+$border-color: #d9dbdd;
+$hover-color: #f3f5f9;
 
-$--nav-height: 35px;
-$--nav-color: #313a40;
-$--nav--background-color: #ffffff;
+$nav-height: 35px;
+$nav-color: #313a40;
+$nav--background-color: #ffffff;
 
-$--sidebar-heder-background-color: $--theme-color;
-$--sidebar-content-background-color: #ffffff;
+$sidebar-heder-background-color: $theme-color;
+$sidebar-content-background-color: #ffffff;
 
-$--page-bar-height: 32px;
+$page-bar-height: 32px;
