feat(editor): 组件配置中的样式支持单独一列显示

--- a/packages/editor/src/theme/common/var.scss
+++ b/packages/editor/src/theme/common/var.scss
@@ -12,3 +12,5 @@ $sidebar-heder-background-color: $theme-color;
 $sidebar-content-background-color: #ffffff;
 
 $page-bar-height: 32px;
+
+$props-style-panel-width: 300px;
