--- a/packages/editor/src/theme/style-setter/layout.scss
+++ b/packages/editor/src/theme/style-setter/layout.scss
@@ -1,8 +1,7 @@
 // 盒子模型
 .layout-box-container {
   position: relative;
-  margin: 0 0 16px 16px;
-  width: 270px;
+  width: 100%;
   height: 150px;
 
   .help-txt {
