fix(form): text与同行元素不对齐问题

--- a/packages/form/src/theme/text.scss
+++ b/packages/form/src/theme/text.scss
@@ -1,3 +1,9 @@
+.m-fields-text {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
 .m-form-validate__warning {
   color: var(--el-color-warning);
   font-size: 12px;
