--- a/packages/form/src/theme/form.scss
+++ b/packages/form/src/theme/form.scss
@@ -48,4 +48,8 @@
       margin-left: 0 !important;
     }
   }
+
+  &.t-form:not(.t-form-inline) .t-form__item:last-of-type {
+    margin-bottom: var(--td-comp-margin-xxl);
+  }
 }
